--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,6 @@
     <string name="center_string">This is centered</string>
     <string name="main_button1_string">Start notification</string>
     <string name="main_button2_string">Stop notification</string>
-
     <string name="settings_btn_1">Default</string>
     <string name="settings_btn_2">Yellow</string>
     <string name="settings_btn_3">Green</string>
@@ -45,5 +44,9 @@
     <string name="summary_parent_preference">summary_parent_preference</string>
     <string name="title_child_preference">title_child_preference</string>
     <string name="summary_child_preference">summary_child_preference</string>
+    <string name="title_fragment_preference">title_fragment_preference</string>
+    <string name="summary_fragment_preference">summary_fragment_preference</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="home_welcome">Welcome to the App!</string>
 
 </resources>
