--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,9 +29,9 @@
     <string name="title_edittext_preference">title_edittext_preference</string>
     <string name="summary_edittext_preference">summary_edittext_preference</string>
     <string name="dialog_title_edittext_preference">dialog_title_edittext_preference</string>
-    <string name="title_list_preference">title_list_preference</string>
-    <string name="summary_list_preference">summary_list_preference</string>
-    <string name="dialog_title_list_preference">dialog_title_list_preference</string>
+    <string name="title_list_preference">Background</string>
+    <string name="summary_list_preference">Change App Background Colour</string>
+    <string name="dialog_title_list_preference">Choose a colour</string>
     <string name="launch_preferences">launch_preferences</string>
     <string name="title_screen_preference">title_screen_preference</string>
     <string name="summary_screen_preference">summary_screen_preference</string>
@@ -48,5 +48,10 @@
     <string name="summary_fragment_preference">summary_fragment_preference</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="home_welcome">Welcome to the App!</string>
+    <string name="title_activity_settings_menu">SettingsMenu</string>
+    <string name="about_Title">About:</string>
+    <string name="about_picture_text">Here\'s a picture!</string>
+    <string name="about_more_info">More info: hahahaha</string>
+    <string name="about_author">Written by: Luke Kroeker</string>
 
 </resources>
